--- a/README.rmd
+++ b/README.rmd
@@ -24,9 +24,9 @@ iv.     Higher level groupings for comparing objects (eg. compare objects per ce
 
 
 **Outputs**
-lifeTgit aimes outputs:\
+lifeTimes outputs:\
 i.      Calculated correlations clustered by strength at lag zero\
-ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\ 
+ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\
 iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\
 
 **Output examples**\
