--- a/README.rmd
+++ b/README.rmd
@@ -16,15 +16,18 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "README_figs/README-")
 
 This is a package for **detecting** and **visualising** correlations between objects in biological series data. 
 
-**Required inputs:**\
+**How to use**\
+Currently, just source and call the  `` `r "\u0060r timesChain()\u0060"` `` function,\
+this will chain together the lifeTimes workflow on a built in set of default data.
+
+**Inputs**\
 i.      Evenly spaced series data (eg. can be time or space series)\
 ii.     Label of the measurements taken. (eg. can be shape or signal intensity)\
 iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)\
 iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)\
 
 
-**Outputs**
-lifeTimes outputs:\
+**Outputs**\
 i.      Calculated correlations clustered by strength at lag zero\
 ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\
 iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\
