added leadLagClusterPlot() - includes missing argument check - reports rows removed if NA in matrix

--- a/README.rmd
+++ b/README.rmd
@@ -16,7 +16,13 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "README_figs/README-")
 
 This is a package for **detecting** and **visualising** correlations between objects in biological series data. 
 
+Citation
+--------
+
+**lifeTimes** is available for everyone. If you find it useful for your research please be so kind as to cite the work that motivated its development: **Environmentally dependent and independent control of cell shape determination by Rho GTPase regulators in melanoma** doi: https://doi.org/10.1101/2021.10.11.463377
+
 **How to use**\
+--------
 To calculate cross correlation, just source, assign, and call the  ``outputCCF <- timesChain()`` function.\
 This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.\
 \
@@ -24,9 +30,8 @@ To plot cross correlations, just call ``clusterPlot()`` \
 To change the plot style just adjust the ``plotType`` argument. \
 For example, ``clusterPlot(plotType = "rawTraces")`` \
 
-
-
 **Inputs**\
+--------
 i.      Evenly spaced series data (eg. can be time or space series)\
 ii.     Label of the measurements taken. (eg. can be shape or signal intensity)\
 iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)\
@@ -34,11 +39,13 @@ iv.     Higher level groupings for comparing objects (eg. compare objects per ce
 
 
 **Outputs**\
+--------
 i.      Calculated correlations clustered by strength at lag zero\
 ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\
 iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\
 
-**Output examples**\
+**Examples**\
+--------
 
 **Fig 1** Calculated correlation clustered by strength at lag zero\
 \
