--- a/README.rmd
+++ b/README.rmd
@@ -23,40 +23,40 @@ Citation
 
 **How to use**\
 --------
-To calculate cross correlation, just source, assign, and call the  ``outputCCF <- lifeTimesChain()`` function.\
-This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.\
-\
-To plot cross correlations, just call ``clusterPlot(outputCCF)`` \
-To change the plot style just adjust the ``plotType`` argument. \
-For example, ``clusterPlot(outputCCF, plotType = "rawTraces")`` \
+To calculate cross correlation, just load the package, assign, and call the  ``outputCCF <- lifeTimesChain()`` function. 
+This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.<br>
+<p>
+To plot cross correlations, just call ``clusterPlot(outputCCF)`` <br>
+To change the plot style just adjust the ``plotType`` argument. <br>
+For example, ``clusterPlot(outputCCF, plotType = "rawTraces")`` <br>
 
 **Inputs**\
 --------
-i.      Evenly spaced series data (eg. can be time or space series)\
-ii.     Label of the measurements taken. (eg. can be shape or signal intensity)\
-iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)\
-iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)\
+i.      Evenly spaced series data (eg. can be time or space series)
+ii.     Label of the measurements taken. (eg. can be shape or signal intensity)
+iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)
+iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)
 
 
 **Outputs**\
 --------
-i.      Calculated correlations clustered by strength at lag zero\
-ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\
-iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\
+i.      Calculated correlations clustered by strength at lag zero\n
+ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\n
+iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\n
 
 **Examples**\
 --------
 
 **Fig 1** Calculated correlation clustered by strength at lag zero\
-\
-![an image caption Source: Ultimate Funny Dog Videos Compilation 2013.](README_figs/README-clusteredCorrelations.png){width=50%}
+<p>
+![Fig 1: An example of clusterPlot(), output](README_figs/README-clusteredCorrelations.png){width=50%}
 
 **Fig 2** Calculated asymmetries between past and future lags, clustered by strength of asymmetry\
-\
-![an image caption Source: Ultimate Funny Dog Videos Compilation 2013.](README_figs/README-clusteredCorrelationLags.png){width=50%}
+<p>
+![Fig 2: An example of leadLagClusterPlot(), output](README_figs/README-clusteredCorrelationLags.png){width=50%}
 
 **Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation.\
-\
-![an image caption Source: Ultimate Funny Dog Videos Compilation 2013.](README_figs/README-couplingPlot.png){width=50%}
+<p>
+![Fig 3: An example of couplingPlot(), output](README_figs/README-couplingPlot.png){width=50%}
 
 
