--- a/README.rmd
+++ b/README.rmd
@@ -47,16 +47,26 @@ iii.    'Coupling plots' representing the strength of correlation at lag zero, a
 **Examples**\
 --------
 
-**Fig 1** Calculated correlation clustered by strength at lag zero <br>
-<p>
-![Fig 1: example of clusterPlot(), output](README_figs/README-clusteredCorrelations.png){width=50%}
+**Fig 1** Calculated correlation clustered by strength at lag zero  
 
-**Fig 2** Calculated asymmetries between past and future lags, clustered by strength of asymmetry <br>
+<p>
+![Fig 1: example of clusterPlot(), output](README_figs/README-clusteredCorrelations.png){width=50%}  
+
+<p>
+<p>
+
+**Fig** 2Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
+
 <p> 
-![Fig 2: example of leadLagClusterPlot(), output](README_figs/README-clusteredCorrelationLags.png){width=50%}
+![Fig 2: example of leadLagClusterPlot(), output](README_figs/README-clusteredCorrelationLags.png){width=50%}  
 
-**Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation. <br>
 <p>
-![Fig 3: example of couplingPlot(), output](README_figs/README-couplingPlot.png){width=50%}
+<p>
+
+**Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation.  
+
+<p>
+![Fig 3: example of couplingPlot(), output](README_figs/README-couplingPlot.png){width=50%}  
+
 
 
