--- a/README.rmd
+++ b/README.rmd
@@ -11,6 +11,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "README_figs/README-")
 
 [![Project Status: WIP – Initial development is in progress, but there has not yet been a stable, usable release suitable for the public.](https://www.repostatus.org/badges/latest/wip.svg)](https://www.repostatus.org/#wip)
 
+[![R build status](https://github.com/somaSystems/lifeTimes/workflows/R-CMD-check/badge.svg)](https://github.com/somaSystems/lifeTimes/actions)
 
 ## lifeTimes: correlations in biological series data
 
