--- a/README.rmd
+++ b/README.rmd
@@ -19,7 +19,7 @@ This is a package for **detecting** and **visualising** correlations between obj
 Citation
 --------
 
-**lifeTimes** is available for everyone. If you find it useful for your research please be so kind as to cite the work that motivated its development: **Environmentally dependent and independent control of cell shape determination by Rho GTPase regulators in melanoma** doi: https://doi.org/10.1101/2021.10.11.463377
+**lifeTimes** is available for everyone. If you find it useful for your research please cite the work that motivated its development: **Environmentally dependent and independent control of cell shape determination by Rho GTPase regulators in melanoma.** doi: https://doi.org/10.1101/2021.10.11.463377
 
 **Quick start**  
 ----
@@ -47,10 +47,8 @@ This will chain together the lifeTimes workflow on a built in set of default dat
 <p>
 To plot cross correlations, just call ``clusterPlot(ltc)``.  
 
-To change the plot style just adjust the ``plotType`` argument. <br>
-The options are ``c( "compoundPlot", "draw_treatmentDendrogram", "plt_dendr", "heatmapLagZero", "rawTraces", "clusteredLines")``.  
+To change the plot style just adjust the ``plotType`` argument. The options are ``c( "compoundPlot", "draw_treatmentDendrogram", "plt_dendr", "heatmapLagZero", "rawTraces", "clusteredLines")``. For example, ``clusterPlot(ltc, plotType = "rawTraces")``  
 
-For example, ``clusterPlot(ltc, plotType = "rawTraces")`` <br>
 <p>
 To plot clustered lead vs lag metrics which emphasise the direction of coupling, 
 just call ``leadLagClusterPlot(ltc)``.  
