--- a/README.rmd
+++ b/README.rmd
@@ -35,15 +35,17 @@ install()
 
 #copy and paste to run on test data
 ltc <- lifeTimesChain() #calculate cross correlation
-clusterPlot(ltc) #plot clustered correlations
-leadLagClusterPlot(ltc) #plot direction of correlations
-couplingPlot(ltc) # plot strength and direction of correlation
+lts_clusterPlot(ltc) #plot clustered correlations
+lts_leadLagClusterPlot(ltc) #plot direction of correlations
+lts_couplingPlot(ltc) # plot strength and direction of correlation
 
 ```
-**How to use**\
---------
+  
+  
+**How to use**
+------
 To calculate cross correlation, just load the package, assign, and call the  ``ltc <- lifeTimesChain()`` function. 
-This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.<br>
+This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.
 <p>
 To plot cross correlations, just call ``clusterPlot(ltc)``.  
 
@@ -57,35 +59,22 @@ just call ``leadLagClusterPlot(ltc)``.
 Finally, to plot coupling plots, incorporating both strength and direction 
 of coupling, just call ``couplingPlot(ltc)``.
 
-**Inputs**\
+**Examples**
 --------
-i.      Evenly spaced series data (eg. can be time or space series)
-ii.     Label of the measurements taken. (eg. can be shape or signal intensity)
-iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)
-iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)
 
-
-**Outputs**\
---------
-i.      Calculated correlations clustered by strength at lag zero\n
-ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry\n
-iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation\n
-
-**Examples**\
---------
+Example data are yearly correlations of rainfall and river flow rates for two different rivers in the United Kingdom, the Ash and Thames rivers. Correlations are calculated and plotted separately based on two explanatory variables, season (summer, autumn, winter, spring), and catchment region (Mardock, Kingston).  
 
 **Fig 1** Calculated correlation clustered by strength at lag zero  
 
 <p>
-![Fig 1: example of clusterPlot(), output](README_figs/README-clusteredCorrelations.png){width=50%}  
-
+![Fig 1A: example of clusterPlot(), output](README_figs/clusterPlots.png){width=60%}  
 <p>
 <p>
 
-**Fig** 2Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
+**Fig 2** Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
 
 <p> 
-![Fig 2: example of leadLagClusterPlot(), output](README_figs/README-clusteredCorrelationLags.png){width=50%}  
+![Fig 2: example of leadLagClusterPlot(), output](README_figs/leadLagPlot.png){width=50%}  
 
 <p>
 <p>
@@ -93,7 +82,27 @@ iii.    'Coupling plots' representing the strength of correlation at lag zero, a
 **Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation.  
 
 <p>
-![Fig 3: example of couplingPlot(), output](README_figs/README-couplingPlot.png){width=50%}  
+![Fig 3: example of couplingPlot(), output](README_figs/couplingPlot.png){width=40%}  
+
+
+**Fig 4** Ariel images of the Ash, and Thames rivers.  
+
+![Fig 4: example of couplingPlot(), output](README_figs/riverCatchments.png){width=60%}  
+
+**Inputs**
+--------
+i.      Evenly spaced series data (eg. can be time or space series)
+ii.     Label of the measurements taken. (eg. can be shape or signal intensity)
+iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)
+iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)
+
+
+**Outputs**
+--------
+i.      Calculated correlations clustered by strength at lag zero  
+ii.     Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
+iii.    'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation  
+
 
 
 
