added user input and dev readme

--- a/lifeTimes/README.Rmd
+++ b/lifeTimes/README.Rmd
@@ -13,7 +13,11 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "README_figs/README-")
 
 
 ## Notes on developming lifeTimes
-
+**Refactored code**
+--------
+This version of lifeTimes is refactored.  
+The main function is now designed to take use input.  
+The core functions are written with the aim to be able to take a range of user input, and adjust dynamically.
 
 **Description of functions**
 --------
