--- a/README.rmd
+++ b/README.rmd
@@ -6,7 +6,7 @@ output: rmarkdown::github_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path = "README_figs/README-")
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
@@ -67,14 +67,14 @@ Example data are yearly cross correlation functions (CCFs) of rainfall and river
 **Fig 1** Calculated cross correlations clustered by strength at lag zero  
 
 <p>
-![Fig 1A: example of clusterPlot(), output](README_figs/clusterPlots.png){width=60%}  
+![Fig 1A: example of clusterPlot(), output](man/figures/clusterPlots.png){width=60%}  
 <p>
 <p>
 
 **Fig 2** Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
 
 <p> 
-![Fig 2: example of leadLagClusterPlot(), output](README_figs/leadLagPlot.png){width=50%}  
+![Fig 2: example of leadLagClusterPlot(), output](man/figures/leadLagPlot.png){width=50%}  
 
 <p>
 <p>
@@ -82,12 +82,12 @@ Example data are yearly cross correlation functions (CCFs) of rainfall and river
 **Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation.  
 
 <p>
-![Fig 3: example of couplingPlot(), output](README_figs/couplingPlot.png){width=40%}  
+![Fig 3: example of couplingPlot(), output](man/figures/couplingPlot.png){width=40%}  
 
 
 **Fig 4** Ariel images of the Ash, and Thames rivers.  
 
-![Fig 4: example of couplingPlot(), output](README_figs/riverCatchments.png){width=60%}  
+![Fig 4: example of couplingPlot(), output](man/figures/riverCatchments.png){width=60%}  
 
 **Inputs**
 --------
