separate lts_input() to be part of list of calls, made lts_calc() as main user interface, and as a wrapper for lts_input() - also added codecoverage report badge - correction to lts_couplingPlot() to use modeMaxCorrLag

--- a/README.rmd
+++ b/README.rmd
@@ -9,8 +9,12 @@ output: rmarkdown::github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 
+[![codecov](https://codecov.io/gh/somaSystems/lifeTimes/branch/main/graph/badge.svg?token=4LFWpvvLOq)](https://codecov.io/gh/somaSystems/lifeTimes)  
+
+[![test-coverage](https://github.com/somaSystems/lifeTimes/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/somaSystems/lifeTimes/actions/workflows/test-coverage.yaml)
 
 ## lifeTimes: correlations in biological series data
 
