--- a/README.rmd
+++ b/README.rmd
@@ -28,14 +28,26 @@ Citation
 **Quick start**  
 ----
 
-Download the code for lifeTimes and run these commands to try the workflow on a built-in dataset
-
+Install lifeTimes
 ```{r include=TRUE, eval = FALSE}
-# Extract and unzip the code
-# navigate into the top level directory 
-# run installation:
-install()
+
+#install devtools if needed
+if(!require("devtools")) install.packages("devtools")
+
+#load devtools
+library(devtools)
+
+#install from github, using package access token
+install_github("somaSystems/lifeTimes",
+auth_token = "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") 
+
+
+```
+  
+Run lifeTimes on default data
+```{r}
 #copy and paste to run on test data
+library(lifeTimes)
 
 lts <- lts_in() #calculate cross correlation
 
@@ -46,25 +58,22 @@ lts_plot_ClustSum(lts) #plot direction of correlations
 lts_plot_coupled(lts) # plot strength and direction of correlation
 ```
   
-  
-**How to use**
+  **How to use**
 ------
-To calculate cross correlation, just load the package, assign, and call the  ``lts <- lts_input()`` function. 
+To calculate cross correlation, just load the package, assign, and call the  ``lts <- lts_in()`` function. 
 This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.
 <p>
-To plot cross correlations, just call ``clusterPlot(lts)``.  
-
-To change the plot style just adjust the ``plotType`` argument. The options are ``c( "compoundPlot", "draw_treatmentDendrogram", "plt_dendr", "heatmapLagZero", "rawTraces", "clusteredLines")``. For example, ``clusterPlot(ltc, plotType = "rawTraces")``  
+To plot cross correlations, just call ``lts_plot_ccfs(lts)``.  
 
 <p>
 To plot clustered lead vs lag metrics which emphasise the direction of coupling, 
-just call ``leadLagClusterPlot(lts)``.  
+just call ``lts_plot_ClustSum(lts)``.  
 
 <p>
 Finally, to plot coupling plots, incorporating both strength and direction 
-of coupling, just call ``couplingPlot(lts)``.
-
-**Examples**
+of coupling, just call ``lts_plot_coupled(lts)``.
+  
+**Example data**
 --------
 
 Example data are yearly cross correlation functions (CCFs) of rainfall and river flow rates for two different rivers in the United Kingdom, the Ash and Thames rivers. CCFs are calculated and plotted separately based on two explanatory variables, season (summer, autumn, winter, spring), and catchment region (Mardock, Kingston).  
