corrected typo in docs

--- a/README.rmd
+++ b/README.rmd
@@ -23,7 +23,7 @@ This is a package for **detecting** and **visualising** correlations between obj
 Citation
 --------
 
-**lifeTimes** is available for everyone. If you find it useful for your research please cite the work that motivated its development: **Environmentally dependent and independent control of cell shdepre4cated)READNEAape determination by Rho GTPase regulators in melanoma.** doi: https://doi.org/10.1101/2021.10.11.463377
+**lifeTimes** is available for everyone. If you find it useful for your research please cite the work that motivated its development: **Environmentally dependent and independent control of cell shape determination by Rho GTPase regulators in melanoma.** doi: https://doi.org/10.1101/2021.10.11.463377
 
 **Quick start**  
 ----
