--- a/README.rmd
+++ b/README.rmd
@@ -133,7 +133,7 @@ iii.landscape scale datasets.
 **Dataset 1: Rainfall and river flow in the United Kingdom**
 
 **Landscape scale data**
-lifeTimes can be used to find coupling between processes at the landscape or ecosystem scale. For this example, I have used data from the Unied Kingdom, National River Flow Archive (https://nrfa.ceh.ac.uk/web-download-service). We will look at two types of data, i) Gauged Daily Flows (GDF) which measure how much water is in a river, and ii) Catchment Daily Rainfall (CDR) which measure the amount of rain on the landscape around the river. River flows are in cubic meters per second, and rainfall is in mm across the catchment in the given reference period (https://nrfa.ceh.ac.uk/data-formats-types).  
+lifeTimes can be used to find coupling between processes at the landscape or ecosystem scale. For this example, I have used data from the United Kingdom, National River Flow Archive (https://nrfa.ceh.ac.uk/web-download-service). We will look at two types of data, i) Gauged Daily Flows (GDF) which measure how much water is in a river, and ii) Catchment Daily Rainfall (CDR) which measure the amount of rain on the landscape around the river. River flows are in cubic meters per second, and rainfall is in mm across the catchment in the given reference period (https://nrfa.ceh.ac.uk/data-formats-types).  
 <p>
 For this example I have downloaded data from the Thames river, at Kingston (https://nrfa.ceh.ac.uk/data/station/info/39001), and the Ash river, at Mardock https://nrfa.ceh.ac.uk/data/station/info/38002. I have also subset the data between the years 1983 and 2017. This is a period where both stations were operating, and recording measurements.  
 <p>
@@ -147,7 +147,8 @@ head(rain_flow)
 Plotting the river flow and rainfall measures over a 1000 day interval looks like this:
 ![Raw data example:](man/figures/raw_flow_rain.png){width=40%}
 
-The main funtion for user input in lifeTimes is ```lts_in()```. To test that lifeTimes is working you can run this function without any arguments. This will run the program on a default set of data.  
+The main funtion for user input in lifeTimes is ```lts_in()```. To test that lifeTimes is working you can run this function without any arguments. This will run the program on a default set of data.However, it is more interesting to run lifeTimes on your own data. Below, I have included a worked example of how to use run lifeTimes on a dataset. For this example, I am still usingthe rain_flow dataset, except that the steps to run this data in ```lts_in()``` are now clearly shown.  
+
 
 **Example 1**
 ```{r include=TRUE}
