--- a/README.rmd
+++ b/README.rmd
@@ -2,7 +2,10 @@
 title: "README"
 author: "LGD"
 date: "19/12/2021"
-output: rmarkdown::github_document
+output:
+  github_document:
+    toc: true
+    toc_depth: 3
 ---
 
 ```{r setup, include=FALSE}
@@ -16,19 +19,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 [![test-coverage](https://github.com/somaSystems/lifeTimes/actions/workflows/test-coverage.yaml/badge.svg)](https://github.com/somaSystems/lifeTimes/actions/workflows/test-coverage.yaml)
 
-## lifeTimes: correlations in biological series data
+
+**lifeTimes: correlations in biological series data**
 
 This is a package for **detecting** and **visualising** correlations between objects in biological series data. 
 
-Citation
---------
+**Citation**
+
 
 **lifeTimes** is available for everyone. If you find it useful for your research please cite the work that motivated its development: **Environmentally dependent and independent control of cell shape determination by Rho GTPase regulators in melanoma.** doi: https://doi.org/10.1101/2021.10.11.463377
 
 **Quick start**  
 ----
 
-**Install lifeTimes**
+#**Install lifeTimes**
 ```{r include=TRUE, eval = FALSE}
 #install devtools if needed
 if(!require("devtools")) install.packages("devtools")
@@ -48,12 +52,15 @@ auth_token = "<paste your github token as a string here>")
 ```
   
 **Run lifeTimes on default data**
-```{r include=TRUE, eval = FALSE}
+```{r include=TRUE, results='hide'}
 #copy and paste to run on test data
 library(lifeTimes)
 
 lts <- lts_in() #calculate cross correlation
+```
 
+**Visualise results from lifeTimes on default data**
+```{r include=TRUE}
 lts_plot_ccfs(lts) #plot clustered correlations
 
 lts_plot_ClustSum(lts) #plot direction of correlations
@@ -61,76 +68,32 @@ lts_plot_ClustSum(lts) #plot direction of correlations
 lts_plot_coupled(lts) # plot strength and direction of correlation
 ```
 
+**Fig 1** Ariel images of the Ash, and Thames rivers.  
 
-**Quick how to use**
-------
-To calculate cross correlation, just load the package, assign, and call the  ``lts <- lts_in()`` function. 
-This will chain together the lifeTimes workflow on a built in set of default data and return calculated cross correlations.
-<p>
-To plot cross correlations, just call ``lts_plot_ccfs(lts)``.  
+![Fig 1: Ariel images of the Ash, and Thames rivers](man/figures/riverCatchments.png){width=60%}  
 
-<p>
-To plot clustered lead vs lag metrics which emphasise the direction of coupling, 
-just call ``lts_plot_ClustSum(lts)``.  
-
-<p>
-Finally, to plot coupling plots, incorporating both strength and direction 
-of coupling, just call ``lts_plot_coupled(lts)``.
-  
-**Example data and Output**
---------
-
-Example data are yearly cross correlation functions (CCFs) of rainfall and river flow rates for two different rivers in the United Kingdom, the Ash and Thames rivers. CCFs are calculated and plotted separately based on two explanatory variables, season (summer, autumn, winter, spring), and catchment region (Mardock, Kingston).  
-
-**Fig 1** Calculated cross correlations clustered by strength at lag zero  
-
-<p>
-![Fig 1A: example of clusterPlot(), output](man/figures/clusterPlots.png){width=60%}  
-<p>
-<p>
-
-**Fig 2** Calculated asymmetries between past and future lags, clustered by strength of asymmetry  
-
-<p> 
-![Fig 2: example of leadLagClusterPlot(), output](man/figures/leadLagPlot.png){width=50%}  
-
-<p>
-<p>
-
-**Fig 3** 'Coupling plots' representing the strength of correlation at lag zero, and the direction of correlation.  
-
-<p>
-![Fig 3: example of couplingPlot(), output](man/figures/couplingPlot.png){width=40%}  
+**Quick summary on inputs**  
+i.      Evenly spaced series data (eg. can be time or space series)\
+ii.     Label of the measurements taken. (eg. can be shape or signal intensity)\
+iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)\
+iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)  
 
 
-**Fig 4** Ariel images of the Ash, and Thames rivers.  
+**Quick notes on outputs**  
+i.      Plots of calculated correlations clustered by strength at lag zero\
+ii.     Plots of calculated asymmetries between past and future lags, clustered by strength of asymmetry\
+iii.    Plots  representing both the strength of correlation at lag zero, and the direction of correlation\
+iv.     Calculated summary statistics of CCFs that can be used in downstream analysis (e.g to improve the performance of classification tasks)  
 
-![Fig 4: example of couplingPlot(), output](man/figures/riverCatchments.png){width=60%}  
-
-**Quick notes on inputs**
-
-i.      Evenly spaced series data (eg. can be time or space series)
-ii.     Label of the measurements taken. (eg. can be shape or signal intensity)
-iii.    Labels for the objects to be compared (eg. cytoplasm and nuclear compartments)
-iv.     Higher level groupings for comparing objects (eg. compare objects per cell/organism/treatment/community)
-
-
-**Quick notes on outputs**
-i.      Plots of calculated correlations clustered by strength at lag zero  
-ii.     Plots of calculated asymmetries between past and future lags, clustered by strength of asymmetry  
-iii.    Plots  representing both the strength of correlation at lag zero, and the direction of correlation  
-iv.     Calculated summary statistics of CCFs that can be used in downstream analysis (e.g to improve the performance of classification tasks).
-  
 **Detailed examples**
 ------
 
 **description of default data**
 lifeTimes makes it easy to detect "coupling" between different components of biological systems from the scale of cells, to organisms, to ecosystems. Along these lines, lifeTimes comes with examples of:  
-i.subcellular,  
-ii.organism, and  
-iii.landscape scale datasets.
+i.landscape scale datasets,
+ii.subcellular scale datasets.  
 
-**Dataset 1: Rainfall and river flow in the United Kingdom**
+**Dataset 1: Rainfall and river flow**
 -----
 **Landscape scale data**
 lifeTimes can be used to find coupling between processes at the landscape or ecosystem scale. For this example, I have used data from the United Kingdom, National River Flow Archive (https://nrfa.ceh.ac.uk/web-download-service). We will look at two types of data, i) Gauged Daily Flows (GDF) which measure how much water is in a river, and ii) Catchment Daily Rainfall (CDR) which measure the amount of rain on the landscape around the river. River flows are in cubic meters per second, and rainfall is in mm across the catchment in the given reference period (https://nrfa.ceh.ac.uk/data-formats-types).  
@@ -160,6 +123,8 @@ lts_pairedVars <- lts_pairsMaker(c("rainfall_cm","flow_m3s"))
 lts_pairedVars
 ```
 
+### **Two categorical variable with single pair of measured variables** 
+
 ```{r include=TRUE, eval = FALSE}
 
 #arguments for lts_in() with default inputs (the "river catchments "rain_flow" dataset) shown
@@ -174,19 +139,18 @@ lts_in(.in_tsData = rain_flow  , #1. the dataset
 ```
 
 <p>
-I will now give a walkthrough that explains how the arguments above, and how to run lifeTimes, on your own data! To make any data suitable for lifeTimes, we need the raw data, and four labels, :  
+I will now give a walkthrough that explains the arguments above, and how to run lifeTimes, on your own data! To make any data suitable for lifeTimes, we need the raw data, and four types labels which identify the "time","unique ID", "categorical variable" and "measured variable" columns. There is also an option to identify metadata:  
 <p>
 **The Arguments**  
 <p>
-**1:```.in_tsDat = ``` A series dataframe:** Time series measurements. These should have:  
+**1:```.in_tsData = ``` A series dataframe:** Time series measurements. These should have:  
 i. at least two variables,  
 ii.  evenly spaced intervals,  
-iii. Complete sets of observations (e.g NAs, can be imputed.).  
+iii. Complete sets of observations (e.g NAs, can be imputed).  
 iv. Time series of equal length.  
 v. At least two categorical variables (e.g Treatment vs Control)
 
 TODO: lifeTimes will be compatible with single categorical variable, and missing observations. A helper function to impute NAs will also be included.
-
 <p>
 **2: ```.in_time =``` A unit of time:** So we need to find the column in the dataset that indicates this. In this data we have years, months and days, but the unit of time I am interested in is at the resolution of days. The column in the datset with days is called ```"dayOfseason"```. On the first day of each season (summer, autumn, winter, spring) this value starts at one and increments up until the end of the season.
 <p>
@@ -199,7 +163,6 @@ Currently in lifeTimes, categorical and measured variables can be used in two wa
 i. You can analyse 2 categorical variables and one pair of measured variables. This is shown with the "rain_flow" dataset. The two categorical variables are "catchment" and "season", and the pair of measured variables are "rainfall_cm" and "flow_m3s".  
 ii. alternatively, if you are using one categorical variable, but more than one pair of measured variablesyou can set this to ```.in_plot_measured_variables = TRUE```  
 <p>
-
 **5: ```.in_pairedComparisons =``` Pairs of variables to compare to one another at different lags:** Under the hood, these are passed to the lifeTimes internal functions in the format of a list of lists. There is one master list, holding lists of paired variables to compare. In practice, there is a helper fuction ```lts_pairsMaker()```, that takes a vector with a list of column names, and returns all possible non redundant pairs of variables in this list. So you can give a list of variables you would like to compare to the ```lts_pairsMaker``` function, and assign the output to an object. Then just pass this object as an argument to the ```.in_pairedComparisons =``` parameter (See example 1 above). In addition to iterating all possible combinations of pairings between variables, lts_pairsMaker can be passed a table of pre-specified pairings, and return these in list of list format (this is demonstrated in the examples below).  
 <p>
 **6:```.in_uniqueID_colname =``` A unique identified for each thing we are measuring:** We need to give lifeTimes the column namr which holds the unique identifier for each observation. If there isn,t one, we can create a column in the data frame with unique identifier for each observation.  
@@ -210,7 +173,7 @@ TODO: Future updates to lifetimes will include a helper function that inputs a s
 <p>
 **7: ```.in_metaData =``` Column names of metadata:** This parameter takes column names of any attributes you would like to append to data
 
-**Dataset 2: Subcellular measures in response to drug treatments**
+**Dataset 2: Cell and nucleus**
 ------
 **Subcellular scale data**
 We have seen that lifeTimes can be used to detect the coupling between lanscape scale processes such as rainfall and riverflow, and to highlight how this coupling varies between seasons and geographical regions. In this next example, I am using lifeTimes to look at coupling between the overall geometry of a living cell, and the nucleus compartment within that cell. For this example I have used data from melanoma cells imaged in a 3D collagen matrix, treated with different drugs that affect cell function. The data here are just 30 cells (5 cells for each drug treatment), sampled for demonstration purposes, from a larger dataset.  
@@ -250,7 +213,7 @@ I passed ```my_pairs``` to ```lts_pairsMaker``` with ```defined = TRUE```, to cr
 lts_pairs <- lts_pairsMaker(my_pairs, defined = TRUE)
 ```
 <p>
-**Single categorical variable with multiple measured variables** 
+### **Single categorical variable with multiple measured variables** 
 The data, relevant column names and list of pairs can all be entered into ```lts_in()```. The important and interesting difference between this example and the "rain_flow" example, is that we are now using a **single categorical variable**, "Treatment". In this situation you must set ```.in_plot_measured_variables = TRUE```. This means lifeTimes will cluster and plot the different measured variables.  
 <p>
 TODO: Improve UI by either removing ```.in_plot_measured_variables = TRUE``` argu,ent, and making it automatic when only one categorical is entered, OR make it possible to enter only one categorical, while ```.in_plot_measured_variables = FALSE```.
