--- a/README.rmd
+++ b/README.rmd
@@ -262,25 +262,23 @@ i. generating hypotheses about cause and effect between parts of a system
 ii. improving the results of classification tasks indynamic datasets  
 <p>
 The code below shows how you can access summary statistics about each ovbservation, for use in downstream tasks.
-```{r}
+```{r include=TRUE, results = 'hide'}
 #load lideTimes
 library(lifeTimes)
 
 #run lifeTimes
 lts_demo <- lts_in()
+```
 
+
+```{r}
 #access the summary statistics output from lifeTimes
 #there are a range of these in a list called "lts_ccf_summaries"
-lts_demo$lts_ccf_summaries
 
 #ccf summary statistics are stored at the level of individual observations 
+#these are in "lts_singleton_summ_metadata"
 #here is an example ofthe first 9 summaries
-head(lts_demo$lts_ccf_summaries$lts_singleton_summ_metadata)
-
-
-
-
-
+head(lts_demo$lts_ccf_summaries$lts_singleton_summ_metadata, 9)
 ```
 TODO: A tutorial on how to use these summary statistics in PCA visualisation and PLSR will follow.
 
